--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Naoto Yoshida Portfolio</title>
     <meta name="description" content="フリーランスエンジニア吉田直人のポートフォリオ">
     <meta name="keywords" content="ポートフォリオ,フリーランス,エンジニア,IT,吉田直人">
-    <link rel="stylesheet" href="../CSS/reset.css">
-    <link rel="stylesheet" href="../CSS/index.css">
-    <link rel="shortcut icon" href="../images/TabIcon.jpg">
+    <link rel="stylesheet" href="docs/CSS/reset.css">
+    <link rel="stylesheet" href="docs/CSS/ndex.css">
+    <link rel="shortcut icon" href="docs/images/TabIcon.jpg">
     <!-- <script src="sample.js"></script> -->
   </head>
 
@@ -17,12 +17,11 @@
       <!-- <img src="../images/yoshipedia_logo.png" alt="yoshipedia", class="logo"> -->
     </div>
 
+    <div>ポートフォリオ作成中</div>
     <div class="content">
       <!-- メインコンテンツ -->
       <div>吉田 直人</div>
       <!-- <div class=source>出典: フリー百科事典『ヨシペディア（Yoshipedia）』</div> -->
-
-      <nav>ナビ</nav>
       <!----- メインコンテンツ ----->
       <article>
         <h1>タイトル</h1>
